Add privacy policy link and update contact email
Added a minimalistic Privacy & Data Policy link to the app.html footer for better visibility. Updated the contact email in privacy-policy.html to solarpacknc@ncsu.edu.

--- a/app.html
+++ b/app.html
@@ -442,6 +442,12 @@
 		</section>
 	</main>
 
+	<!-- Minimalistic Privacy Policy Link -->
+	<div style="text-align:center;margin:2.5rem 0 0;font-size:0.98rem;">
+		<a href="privacy-policy.html" style="color:var(--accent);text-decoration:none;opacity:0.8;transition:opacity 0.2s;">Privacy & Data Policy</a>
+	</div>
+	<footer class="footer">&copy; 2025 SolarPack. All rights reserved.</footer>
+
 	<script>
 		function openModal(modalId) {
 			document.getElementById(`modal-${modalId}`).classList.add('active');
@@ -471,6 +477,5 @@
 			}
 		});
 	</script>
-	<footer class="footer">&copy; 2025 SolarPack. All rights reserved.</footer>
 </body>
 </html>
