--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -237,7 +237,7 @@
 						Questions? Open an issue on
 						<a href="https://github.com/NCSU-Solarpack" target="_blank" rel="noopener noreferrer">GitHub</a>
 						or email us at
-						<a href="mailto:privacy@yourdomain.com">privacy@yourdomain.com</a>.
+						<a href="solarpacknc@ncsu.edu">solarpacknc@ncsu.edu</a>.
 					</p>
 				</div>
 			</div>
