--- a/app.html
+++ b/app.html
@@ -272,7 +272,7 @@
 			
 			<!-- App Store and Telemetry Buttons Row -->
 			<div class="app-buttons-row">
-				<a href="https://apps.apple.com/us/app/your-app-id">
+				<a href="https://apps.apple.com/us/app/solarpack/id6748289347">
 					<img src="assets/images/app_store.png" alt="Download on the App Store" style="height:60px;width:auto;box-shadow:none;background:none;" />
 				</a>
 				<a href="https://solarpack-app-server-alyv.onrender.com/#" style="text-decoration:none;">
