--- a/donate.html
+++ b/donate.html
@@ -18,8 +18,24 @@
 		.donate-section { background: var(--card); border-radius: var(--radius); box-shadow: 0 1px 6px #0003; padding: 2.5rem 1.5rem; max-width: 600px; margin: 2.5rem auto 0; text-align: center; }
 		.donate-btn { display: inline-block; background: var(--accent); color: #fff; font-size: 1.2rem; font-weight: 600; padding: 0.9rem 2.2rem; border: none; border-radius: var(--radius); margin-top: 1.5rem; cursor: pointer; transition: background 0.15s; text-decoration: none; }
 		.donate-btn:hover { background: #b71c1c; }
-		
+
 		.footer { text-align: center; color: #888; font-size: 1rem; margin: 3.5rem 0 1.5rem; }
+
+		/* Donorbox modal (popup) */
+		.dbx-modal { position: fixed; inset: 0; display: none; z-index: 1000; }
+		.dbx-modal[open] { display: block; }
+		.dbx-modal__backdrop { position: absolute; inset: 0; background: rgba(0,0,0,0.55); }
+		.dbx-modal__dialog { position: relative; margin: 3vh auto; background: var(--card, #fff); color: inherit; border-radius: var(--radius, 12px); width: min(100% - 1.5rem, 560px); box-shadow: 0 12px 32px rgba(0,0,0,0.35); max-height: 94vh; display: flex; flex-direction: column; overflow: hidden; }
+		.dbx-modal__close { position: absolute; top: .5rem; right: .5rem; background: transparent; border: 0; font-size: 1.6rem; line-height: 1; padding: .25rem .5rem; cursor: pointer; color: #666; }
+		.dbx-modal__close:hover { color: #000; }
+		.dbx-modal__body { padding: 2.25rem 1rem 1rem; overflow: auto; display: flex; justify-content: center; }
+		.dbx-modal__body iframe { width: 100%; max-width: 520px; border: 0; }
+
+		/* Donation meter + legal note */
+		.donation-meter { margin: 1rem auto 1.25rem; display: flex; justify-content: center; }
+		.donation-meter iframe { width: 100%; max-width: 500px; height: 93px; border: 0; }
+		.donate-note { margin-top: 1rem; color: var(--subtxt, #666); font-size: .9rem; }
+		.sr-only { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0,0,0,0); white-space: nowrap; border: 0; }
 	</style>
 </head>
 <body>
@@ -28,14 +44,57 @@
 		<h1>Support Our Mission</h1>
 		<div class="donate-section">
 			<p>Your donation helps us build, innovate, and compete in solar car challenges. Every contribution makes a difference!</p>
+			<!-- Visible campaign progress (Donorbox donation meter) -->
+			<div class="donation-meter" aria-label="Campaign progress">
+				<iframe frameborder="0" height="93px" name="donorbox" scrolling="no" seamless="seamless" src="https://donorbox.org/embed/adopt-a-battery-cell?donation_meter_color=%23e74c3c&amp;only_donation_meter=true" style="max-width:500px; min-width:250px; max-height:none!important" width="100%"></iframe>
+			</div>
 			<ul style="text-align:left;max-width:420px;margin:1.5rem auto 1.5rem auto;color:var(--subtxt);font-size:1.08rem;line-height:1.7;">
 				<li><b>Aeroshell Construction:</b> The largest portion of your donation will go directly toward building our new carbon fiber aeroshell, which is essential for our car's performance and efficiency.</li>
 				<li><b>Regulatory Components:</b> We need to purchase fasteners, wires, and other small accessories to meet strict race regulations—including the battery box, ballast boxes, and other required safety features.</li>
 				<li><b>2026 Race Preparation:</b> Your support helps us meet all technical and safety requirements so we can compete in the 2026 solar car race and represent NC State on a national stage.</li>
 			</ul>
-			<a href="#" class="donate-btn"><i class="fas fa-heart"></i> Donate Now</a>
+			<a href="#" class="donate-btn" aria-haspopup="dialog" aria-controls="donateModal"><i class="fas fa-heart"></i> Donate Now</a>
+			<p class="donate-note">We are a 501(c)(3) charitable organization, EIN: 81-4817863. All the contributions are tax deductible. No goods or services will be provided for the contribution.</p>
 		</div>
 	</main>
+
+	<!-- Donorbox Popup Modal -->
+	<div id="donateModal" class="dbx-modal" aria-hidden="true">
+		<div class="dbx-modal__backdrop" data-close="true"></div>
+		<div class="dbx-modal__dialog" role="dialog" aria-modal="true" aria-labelledby="donorboxDialogTitle">
+			<h2 id="donorboxDialogTitle" class="sr-only">Donation Form</h2>
+			<button class="dbx-modal__close" type="button" aria-label="Close donation form">&times;</button>
+			<div class="dbx-modal__body">
+				<!-- Donorbox embed -->
+				<iframe src="https://donorbox.org/embed/adopt-a-battery-cell?default_interval=o&hide_donation_meter=true" name="donorbox" allowpaymentrequest="allowpaymentrequest" seamless="seamless" frameborder="0" scrolling="no" height="900px" width="100%" style="max-width: 500px; min-width: 250px; max-height:none!important"></iframe>
+			</div>
+		</div>
+	</div>
+
 	<footer class="footer">&copy; 2025 SolarPack. All rights reserved.</footer>
+
+	<!-- Donorbox widget script (load once) -->
+	<script src="https://donorbox.org/widget.js" paypalExpress="true"></script>
+
+	<!-- Modal open/close wiring -->
+	<script>
+		(function() {
+			function ready(fn){ if (document.readyState !== 'loading') { fn(); } else { document.addEventListener('DOMContentLoaded', fn); } }
+			ready(function(){
+				var modal = document.getElementById('donateModal');
+				if (!modal) return;
+				var openBtn = document.querySelector('.donate-btn');
+				var closeBtn = modal.querySelector('.dbx-modal__close');
+				var backdrop = modal.querySelector('.dbx-modal__backdrop');
+				var lastActive = null;
+				function open(e){ if (e) e.preventDefault(); lastActive = document.activeElement; modal.setAttribute('open',''); modal.setAttribute('aria-hidden','false'); document.body.style.overflow = 'hidden'; if (closeBtn) closeBtn.focus(); }
+				function close(){ modal.removeAttribute('open'); modal.setAttribute('aria-hidden','true'); document.body.style.overflow = ''; if (lastActive && lastActive.focus) lastActive.focus(); }
+				if (openBtn) openBtn.addEventListener('click', open);
+				if (closeBtn) closeBtn.addEventListener('click', close);
+				if (backdrop) backdrop.addEventListener('click', close);
+				document.addEventListener('keydown', function(ev){ if (ev.key === 'Escape' && modal.hasAttribute('open')) close(); });
+			});
+		})();
+	</script>
 </body>
 </html>
