--- a/donate.html
+++ b/donate.html
@@ -35,7 +35,7 @@
 		.donation-meter { margin: 1rem auto 1.25rem; display: flex; justify-content: center; }
 		.donation-meter-card { background: #fff; color: #000; border-radius: var(--radius, 12px); padding: 0.75rem; box-shadow: 0 1px 6px rgba(0,0,0,0.15); border: 1px solid rgba(0,0,0,0.06); }
 		.donation-meter iframe { width: 100%; max-width: 500px; height: 93px; border: 0; background: #fff; border-radius: 8px; }
-		.donate-note { margin-top: 1rem; color: var(--subtxt, #666); font-size: .9rem; }
+		.donate-note { margin-top: 1.5rem; color: var(--subtxt, #666); font-size: .82rem; line-height: 1.4; }
 		.sr-only { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0,0,0,0); white-space: nowrap; border: 0; }
 	</style>
 </head>
