--- a/team.html
+++ b/team.html
@@ -60,7 +60,7 @@
 				<img src="assets/images/headshots/thomas_wenning.jpg" alt="Thomas Wenning" class="member-img" />
 				<div class="member-name">Thomas Wenning</div>
 				<div class="member-role">Low Voltage Lead</div>
-				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As the Low Voltage team lead, I manage the systems of the car that allow it to charge using solar energy. After building solar cars in high school, I wanted to continue down that path, with SolarPack being the best opportunity for that. In my free-time, I enjoy tinkering with electronics and building PCs with friends.</p>
+				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;"></p>
 			</div>
 			<div class="member-card">
 				<img src="assets/images/headshots/will_shearin.jpg" alt="Will Shearin" class="member-img" />
