Update team page with default headshots
Replaced individual headshots for Low Voltage Lead and Structures Lead with a default image and removed their names from the team.html page. Added the default headshot image to the assets.

--- a/team.html
+++ b/team.html
@@ -57,14 +57,14 @@
 				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As High Voltage Lead, I’m responsible for the car’s main power and propulsion systems—the 3‑phase motor, inverter, battery pack, and protection systems. I will also jump in on low‑voltage, building firmware, controls, and interfaces, and I help out with our website and app code when needed. In short, anything electrical or software that keeps the car moving is in my lane.</p>
 			</div>
 			<div class="member-card">
-				<img src="assets/images/headshots/thomas_wenning.jpg" alt="Thomas Wenning" class="member-img" />
-				<div class="member-name">Thomas Wenning</div>
+				<img src="assets/images/headshots/default.jpg" alt="Low Voltage Lead" class="member-img" />
+				<div class="member-name"></div>
 				<div class="member-role">Low Voltage Lead</div>
 				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;"></p>
 			</div>
 			<div class="member-card">
-				<img src="assets/images/headshots/will_shearin.jpg" alt="Will Shearin" class="member-img" />
-				<div class="member-name">Will Shearin</div>
+				<img src="assets/images/headshots/default.jpg" alt="Structures Lead" class="member-img" />
+				<div class="member-name"></div>
 				<div class="member-role">Structures Lead</div>
 				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;"></p>
 			</div>
