--- a/app.html
+++ b/app.html
@@ -275,7 +275,7 @@
 				<a href="https://apps.apple.com/us/app/solarpack/id6748289347">
 					<img src="assets/images/app_store.png" alt="Download on the App Store" style="height:60px;width:auto;box-shadow:none;background:none;" />
 				</a>
-				<a href="https://solarpack-app-server-alyv.onrender.com/#" style="text-decoration:none;">
+				<a href="https://solarpack-app-server-alyv.onrender.com/#" style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
 					<button style="background:var(--accent);color:#fff;font-family:'Bebas Neue',sans-serif;font-size:1.3rem;font-weight:bold;letter-spacing:2px;padding:1.0rem 2.2rem;display:flex;align-items:center;gap:0.7rem;border:none;border-radius:10px;box-shadow:0 2px 12px #0003;cursor:pointer;transition:background 0.2s;text-transform:uppercase;">
 						<i class="fas fa-satellite-dish" style="font-size:1.5rem;"></i>
 						VIEW LIVE TELEMETRY
