Update team page with new headshots and member info
Added Aaron Yang's headshot and updated his profile image. Added Will Shearin as Structures Lead with a detailed bio, and updated Max Weiser's role to System Architecture Lead. Also filled in missing names for Matt Pugliese and Max Weiser.

--- a/team.html
+++ b/team.html
@@ -58,15 +58,21 @@
 			</div>
 			<div class="member-card">
 				<img src="assets/images/headshots/default.jpg" alt="Low Voltage Lead" class="member-img" />
-				<div class="member-name"></div>
+				<div class="member-name">Matt Pugliese</div>
 				<div class="member-role">Low Voltage Lead</div>
 				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;"></p>
 			</div>
 			<div class="member-card">
-				<img src="assets/images/headshots/default.jpg" alt="Structures Lead" class="member-img" />
-				<div class="member-name"></div>
-				<div class="member-role">Structures Lead</div>
+				<img src="assets/images/headshots/default.jpg" alt="System Architecture Lead" class="member-img" />
+				<div class="member-name">Max Weiser</div>
+				<div class="member-role">System Architecture Lead</div>
 				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;"></p>
+			</div>
+			<div class="member-card">
+				<img src="assets/images/headshots/will_shearin.jpg" alt="Will Shearin" class="member-img" />
+				<div class="member-name">Will Shearin</div>
+				<div class="member-role">Structures Lead</div>
+				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As the structures team lead, I manage a team of students whose responsibility is to model, test, and fabricate the chassis, roll cage, and other mechanical structures of the car. I am currently a senior in mechanical engineering, and I joined SolarPack right after my sophomore year. I took over as team lead after my junior year and have really enjoyed all my time here. I can see how my classroom skills translate into real-world environments, and how I can contribute to promoting sustainability. In my free time, I enjoy hanging out with friends and cooking.</p>
 			</div>
 			<div class="member-card">
 				<img src="assets/images/headshots/aaron_wold.jpg" alt="Aaron Wold" class="member-img" />
@@ -75,10 +81,10 @@
 				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As the vehicle dynamics team lead, I oversee the development of mechanical aspects within the car, involving systems such as suspension, steering, and powertrain. My interest in these systems stemmed from my interest in LEGO as a child. My other hobbies include playing guitar, playing videogames, and skateboarding.</p>
 			</div>
 			<div class="member-card">
-				<img src="assets/images/headshots/default.jpg" alt="Aaron Yang" class="member-img" />
+				<img src="assets/images/headshots/aaron_yang.jpg" alt="Aaron Yang" class="member-img" />
 				<div class="member-name">Aaron Yang</div>
 				<div class="member-role">Business Lead</div>
-				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As the business team lead, I oversee sponsorship, finance, social media, and outreach events for SolarPack. I am a sophomore majoring in Business Administration with a concentration in Finance. Originally, I was going to major in Mechanical Engineering given my interest in cars and combustion engines. I enjoy playing games, food, and learning to cook foods." I'll get a headshot for you since I don't have a very current one.</p>
+				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As the business team lead, I oversee sponsorship, finance, social media, and outreach events for SolarPack. I am a sophomore majoring in Business Administration with a concentration in Finance. Originally, I was going to major in Mechanical Engineering given my interest in cars and combustion engines. I enjoy playing games, food, and learning to cook foods.</p>
 			</div>
 		</div>
 	</main>
