--- a/team.html
+++ b/team.html
@@ -54,7 +54,7 @@
 				<img src="assets/images/headshots/nathan_hambleton.jpg" alt="Nathan Hambleton" class="member-img" />
 				<div class="member-name">Nathan Hambleton</div>
 				<div class="member-role">High Voltage Lead</div>
-				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As High Voltage Lead, I’m responsible for the car’s main power and propulsion systems—the 3‑phase motor, inverter, battery pack, and protection systems. I will also jump in on low‑voltage, building firmware, controls, and interfaces, and I help out with our website and app code when needed. In short, anything electrical or software that keeps the car moving is in my lane.</p>
+				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As High Voltage Lead, I’m responsible for the car’s main power and propulsion systems—the 3‑phase motor, inverter, battery pack, and protection systems. I will also jump in on low‑voltage, building firmware, controls, and interfaces, and I help out with our website and app code when needed.</p>
 			</div>
 			<div class="member-card">
 				<img src="assets/images/headshots/default.jpg" alt="Low Voltage Lead" class="member-img" />
