Add Max Weiser headshot and update team bio
Added a new headshot image for Max Weiser and updated his profile in team.html with a detailed biography and correct image reference.

--- a/team.html
+++ b/team.html
@@ -63,10 +63,10 @@
 				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;"></p>
 			</div>
 			<div class="member-card">
-				<img src="assets/images/headshots/default.jpg" alt="System Architecture Lead" class="member-img" />
+				<img src="assets/images/headshots/max_weiser.jpg" alt="Max Weiser" class="member-img" />
 				<div class="member-name">Max Weiser</div>
 				<div class="member-role">System Architecture Lead</div>
-				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;"></p>
+				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As the Systems Architecture lead, I lead the development of communication and telemetry systems in the car. I joined SolarPack during the first semester of my freshman year because I was fascinated with the concept of making an electric car fun to drive. During my time with SolarPack, I have learned many skills and gained experiences that I would have never received in my classes. For example, I am now capable of designing and building PCBs, operating HAM radio, and so much more. During my free time, I enjoy playing video games, watching anime, and cooking.</p>
 			</div>
 			<div class="member-card">
 				<img src="assets/images/headshots/will_shearin.jpg" alt="Will Shearin" class="member-img" />
