--- a/alumni.html
+++ b/alumni.html
@@ -60,6 +60,20 @@
 	  <div class="alumni-columns">
 		<div>
 		  <section style="margin-bottom:2.5rem;">
+            <h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Fall 2025</h2>
+            <ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
+                <li><b>Project Director:</b> Fabiola Fabian Plascencia</li>
+                <li><b>Technical Director:</b> Will Shearin</li>
+                <li><b>Aerodynamics Lead:</b> Maghen Lahoud</li>
+                <li><b>High Voltage Lead:</b> Nathan Hambleton</li>
+                <li><b>Low Voltage Lead:</b> Matt Pugliese</li>
+                <li><b>System Architecture Lead:</b> Max Weiser</li>
+                <li><b>Structures Lead:</b> Will Shearin</li>
+                <li><b>Vehicle Dynamics Lead:</b> Aaron Wold</li>
+                <li><b>Business Lead:</b> Aaron Yang</li>
+            </ul>
+          </section>
+		  <section style="margin-bottom:2.5rem;">
 			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2021</h2>
 			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
 				<li><b>Project Director:</b> Alex Kelly</li>
@@ -106,8 +120,6 @@
 				<li><b>Electrical:</b> Thomas Dotson</li>
 			</ul>
 		  </section>
-		</div>
-		<div>
 		  <section style="margin-bottom:2.5rem;">
 			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Fall 2020</h2>
 			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
