--- a/alumni.html
+++ b/alumni.html
@@ -30,17 +30,15 @@
 		
 		.alumni-columns {
 			display: grid;
-			grid-template-columns: 1fr 1fr;
+			grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
 			gap: 2.5rem;
 		}
 		
 		/* Mobile responsive alumni layout */
 		@media (max-width: 768px) {
 			.alumni-columns {
-				grid-template-columns: 1fr;
 				gap: 1.5rem;
 			}
-			
 			.alumni-by-year {
 				padding: 0 1rem;
 			}
