--- a/alumni.html
+++ b/alumni.html
@@ -30,13 +30,15 @@
 		
 		.alumni-columns {
 			display: grid;
-			grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+			grid-template-columns: 1fr 1fr;
 			gap: 2.5rem;
 		}
 		
-		/* Mobile responsive alumni layout */
-		@media (max-width: 768px) {
+		/* Responsive alumni layout: 1 column if screen < 850px */
+		@media (max-width: 850px) {
 			.alumni-columns {
+				grid-template-columns: 1fr;
+				justify-items: center;
 				gap: 1.5rem;
 			}
 			.alumni-by-year {
@@ -55,9 +57,8 @@
 		</div>
 		<!-- Alumni by Year -->
 	<div class="alumni-by-year">
-	  <div class="alumni-columns">
-		<div>
-		  <section style="margin-bottom:2.5rem;">
+			<div class="alumni-columns">
+				<section style="margin-bottom:2.5rem;">
             <h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Fall 2025</h2>
             <ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
                 <li><b>Project Director:</b> Fabiola Fabian Plascencia</li>
@@ -70,8 +71,8 @@
                 <li><b>Vehicle Dynamics Lead:</b> Aaron Wold</li>
                 <li><b>Business Lead:</b> Aaron Yang</li>
             </ul>
-          </section>
-		  <section style="margin-bottom:2.5rem;">
+	</section>
+	<section style="margin-bottom:2.5rem;">
 			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2021</h2>
 			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
 				<li><b>Project Director:</b> Alex Kelly</li>
@@ -84,8 +85,8 @@
 				<li><b>Systems Architecture:</b> Joe Schroedl</li>
 				<li><b>Aerodynamics:</b> Jonathan Rhodes</li>
 			</ul>
-		  </section>
-		  <section style="margin-bottom:2.5rem;">
+	</section>
+	<section style="margin-bottom:2.5rem;">
 			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2020</h2>
 			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
 				<li><b>Project Director:</b> Adam Lineberger</li>
@@ -97,8 +98,8 @@
 				<li><b>Systems Architecture:</b> Colin Brown</li>
 				<li><b>Aerodynamics:</b> Jesse Heidrich</li>
 			</ul>
-		  </section>
-		  <section style="margin-bottom:2.5rem;">
+	</section>
+	<section style="margin-bottom:2.5rem;">
 			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Fall 2018</h2>
 			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
 				<li><b>Director:</b> Cody Biedermann</li>
@@ -108,8 +109,8 @@
 				<li><b>Business:</b> Sam Brennen-Lisko</li>
 				<li><b>Systems Architecture:</b> Byron Spells</li>
 			</ul>
-		  </section>
-		  <section style="margin-bottom:2.5rem;">
+	</section>
+	<section style="margin-bottom:2.5rem;">
 			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2017</h2>
 			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
 				<li><b>Director:</b> Byron Spells</li>
@@ -117,8 +118,8 @@
 				<li><b>Vehicle Dynamics:</b> Melissa Hyland</li>
 				<li><b>Electrical:</b> Thomas Dotson</li>
 			</ul>
-		  </section>
-		  <section style="margin-bottom:2.5rem;">
+	</section>
+	<section style="margin-bottom:2.5rem;">
 			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Fall 2020</h2>
 			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
 				<li><b>Project Director:</b> Alex Kelly</li>
@@ -130,8 +131,8 @@
 				<li><b>Systems Architecture:</b> Colin Brown</li>
 				<li><b>Aerodynamics:</b> Jesse Heidrich</li>
 			</ul>
-		  </section>
-		  <section style="margin-bottom:2.5rem;">
+	</section>
+	<section style="margin-bottom:2.5rem;">
 			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Fall 2019</h2>
 			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
 				<li><b>Director:</b> Adam Lineberger</li>
@@ -142,8 +143,8 @@
 				<li><b>Systems Architecture:</b> Seth Hollandsworth</li>
 				<li><b>Aerodynamics:</b> Nate Browning</li>
 			</ul>
-		  </section>
-		  <section style="margin-bottom:2.5rem;">
+	</section>
+	<section style="margin-bottom:2.5rem;">
 			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2018</h2>
 			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
 				<li><b>Director:</b> Byron Spells</li>
@@ -153,8 +154,8 @@
 				<li><b>Business:</b> Sam Brennen-Lisko</li>
 				<li><b>Design:</b> Jecori Owens-Schuler</li>
 			</ul>
-		  </section>
-		  <section style="margin-bottom:2.5rem;">
+	</section>
+	<section style="margin-bottom:2.5rem;">
 			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Fall 2017</h2>
 			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
 				<li><b>Director:</b> Byron Spells</li>
@@ -165,16 +166,15 @@
 				<li><b>Design:</b> Jecori Owens-Schuler</li>
 				<li><b>Aerodynamics:</b> AB Gundala</li>
 			</ul>
-		  </section>
-		  <section style="margin-bottom:2.5rem;">
+	</section>
+	<section style="margin-bottom:2.5rem;">
 			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">2016</h2>
 			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
 				<li><b>Director:</b> Byron Spells</li>
 				<li><b>Structures:</b> Arsh Grewal</li>
 				<li><b>Vehicle Dynamics:</b> Aciel Binhza</li>
 			</ul>
-		  </section>
-		</div>
+	</section>
 	  </div>
 	</div>
 	</main>
