Add Matt Pugliese headshot and bio to team page
Added matt_pugliese.png headshot image and updated team.html to display Matt Pugliese's photo and biography for the Low Voltage Lead position.

--- a/team.html
+++ b/team.html
@@ -57,10 +57,10 @@
 				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As High Voltage Lead, I’m responsible for the car’s main power and propulsion systems—the 3‑phase motor, inverter, battery pack, and protection systems. I will also jump in on low‑voltage, building firmware, controls, and interfaces, and I help out with our website and app code when needed.</p>
 			</div>
 			<div class="member-card">
-				<img src="assets/images/headshots/default.jpg" alt="Low Voltage Lead" class="member-img" />
+				<img src="assets/images/headshots/matt_pugliese.jpg" alt="Matt Pugliese" class="member-img" />
 				<div class="member-name">Matt Pugliese</div>
 				<div class="member-role">Low Voltage Lead</div>
-				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;"></p>
+				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As the Low Voltage lead,  I manage the systems of the car that allow it to charge using solar energy, as well as the design and communication of the car’s low voltage accessory systems. I joined solarpack during my freshman year because of my interest in renewable energy and love of motorsports. I am currently a senior in electrical engineering with a focus in power systems engineering. Solarpack has given me a lot of hands-on experience and knowledge of hardware and software design outside of classes. Some of my hobbies include playing video games, racquetball, and gardening</p>
 			</div>
 			<div class="member-card">
 				<img src="assets/images/headshots/max_weiser.jpg" alt="Max Weiser" class="member-img" />
