Update team members and headshots on team page
Added Ansh Aggarwal's headshot and replaced Will Shearin with Ansh Aggarwal as Structures Lead in team.html. Updated Matt Pugliese's headshot file extension from .png to .jpg and modified Nathan Hambleton's description to include more background information.

--- a/team.html
+++ b/team.html
@@ -54,7 +54,7 @@
 				<img src="assets/images/headshots/nathan_hambleton.jpg" alt="Nathan Hambleton" class="member-img" />
 				<div class="member-name">Nathan Hambleton</div>
 				<div class="member-role">High Voltage Lead</div>
-				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As High Voltage Lead, I’m responsible for the car’s main power and propulsion systems—the 3‑phase motor, inverter, battery pack, and protection systems. I will also jump in on low‑voltage, building firmware, controls, and interfaces, and I help out with our website and app code when needed.</p>
+				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As High Voltage Lead, I’m responsible for the car’s main power and propulsion systems—the 3‑phase motor, inverter, battery pack, and protection systems. I am a senior in electrical engineering and this is my 4th year in the club. I started out in vehicle dynamics but have since transitioned to high voltage systems. I will also jump in on low‑voltage, building firmware, controls, and interfaces, and I help out with our website and app code when needed.</p>
 			</div>
 			<div class="member-card">
 				<img src="assets/images/headshots/matt_pugliese.jpg" alt="Matt Pugliese" class="member-img" />
@@ -69,10 +69,10 @@
 				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As the Systems Architecture lead, I lead the development of communication and telemetry systems in the car. I joined SolarPack during the first semester of my freshman year because I was fascinated with the concept of making an electric car fun to drive. During my time with SolarPack, I have learned many skills and gained experiences that I would have never received in my classes. For example, I am now capable of designing and building PCBs, operating HAM radio, and so much more. During my free time, I enjoy playing video games, watching anime, and cooking.</p>
 			</div>
 			<div class="member-card">
-				<img src="assets/images/headshots/will_shearin.jpg" alt="Will Shearin" class="member-img" />
-				<div class="member-name">Will Shearin</div>
+				<img src="assets/images/headshots/ansh_aggarwal.jpg" alt="Ansh Aggarwal" class="member-img" />
+				<div class="member-name">Ansh Aggarwal</div>
 				<div class="member-role">Structures Lead</div>
-				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As the structures team lead, I manage a team of students whose responsibility is to model, test, and fabricate the chassis, roll cage, and other mechanical structures of the car. I am currently a senior in mechanical engineering, and I joined SolarPack right after my sophomore year. I took over as team lead after my junior year and have really enjoyed all my time here. I can see how my classroom skills translate into real-world environments, and how I can contribute to promoting sustainability. In my free time, I enjoy hanging out with friends and cooking.</p>
+				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;"></p>
 			</div>
 			<div class="member-card">
 				<img src="assets/images/headshots/aaron_wold.jpg" alt="Aaron Wold" class="member-img" />
